--- a/Recipes/burger.html
+++ b/Recipes/burger.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>A Burger</h1>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
     <img src="../images/burger3.jpg" alt="a burger "height="450px" width="50%px">
     <h2>Description</h2> 
     <p>A classic burger is a hearty and flavorful sandwich featuring a juicy beef patty served between a soft, toasted bun.<br>
