--- a/Recipes/sandwich.html
+++ b/Recipes/sandwich.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Grilled cheese sandwich Recipe</h1>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
     <img src="../images/grilled Cheese 2.jpg" alt="Grilled cheese sandwich " height="450px" width="50%px">
     <h2>Description</h2>
     <p>A grilled cheese sandwich is a classic comfort food made with melted cheese pressed between two slices of buttery, golden-brown toasted bread.
