--- a/Recipes/pizza.html
+++ b/Recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>pizza recipe</h1>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a><br>
     <img src="../images/pizza.jpg" alt="a pizza "height="450px" width="50%px">
     <h2>Description:</h2>
     <p>Pizza is a beloved Italian dish consisting of a golden, crispy crust topped with a savory tomato sauce, melted cheese, and a variety of toppings to suit any taste.<br>
